--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -17,11 +17,11 @@
       <a href="index.html" class="header-brand">Styleguide</a>
       <nav>
         <ul>
-          <li><a href="farver.html">FARVER</a></li>
-          <li><a href="typografi.html">TYPOGRAFI</a></li>
-          <li><a href="knapper.html">KNAPPER</a></li>
+          <li><a href="farver.html">COLORS</a></li>
+          <li><a href="typografi.html">TYPOGRAPHY</a></li>
+          <li><a href="knapper.html">BUTTONS</a></li>
           <li><a href="logo.html">LOGO</a></li>
-          <li><a href="ikoner.html">IKONER</a></li>
+          <li><a href="ikoner.html">ICONS</a></li>
           <li><a href="layout.html">LAYOUT</a></li>
           <li><a href="formular.html">FORMULAR</a></li>
         </ul>
