--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -41,7 +41,7 @@
         </p>
       </div>
       <div class="forsidelogo">
-        <img src="assets/images/logo_blue.png" alt="logobillede" class="forsidelogobillede"/>
+        <img src="assets/images/logo_white.png" alt="logobillede" class="forsidelogobillede"/>
       </div>
     </div>
   </body>
