ændringer fra projekt 4 til projekt 6

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -29,8 +29,8 @@
     </header>
     <div class="sektion1">
       <div class="text">
-        <h1>TinyTools - HairBooking</h1>
-        <h2>Projekt 4 - Digitale Brugergrænseflader</h2>
+        <h1>QuadSAT - Flight Assistant Manual</h1>
+        <h2>Project 6 - Examproject</h2>
         <br />
         <p>
           Denne styleguide er til for at skabe overblik over anvendte designelementer og kode til nuværende og fremtidige designere bag app’en.
