farver sider færdig (mangler beskrivelse)

--- a/styleguide/farver.html
+++ b/styleguide/farver.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/stylesheet.css" />
     <title>Styleguide</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
-    /> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -34,12 +30,12 @@
         <div class="farve1"></div>
         <div class="infobox1">
           <p class="hexcolor">
-            <b>HEX:</b> #1F2D46 <br />
-            <b>RGB:</b> (31, 45, 70) <br />
-            <b>CMYK:</b> 56%, 36%, 0%, 73% <br />
+            <b>HEX:</b> #292929 <br />
+            <b>RGB:</b> (41, 41, 41) <br />
+            <b>CMYK:</b> 0%, 0%, 0%, 84% <br />
           </p>
           <br />
-          <p>
+          <p class="hexcolortext">Baggrundsfarve <br/>
             Primær farve<br/>
             Menulinje <br>
             Logo <br>
@@ -52,12 +48,12 @@
         <div class="farve2"></div>
         <div class="infobox2">
           <p class="hexcolor">
-            <b>HEX:</b> #E3BBAB <br />
-            <b>RGB:</b> (227, 187, 171) <br />
-            <b>CMYK:</b> 0%, 18%, 25%, 11% <br />
+            <b>HEX:</b> #E3E3E3 <br />
+            <b>RGB:</b> (227, 227, 227) <br />
+            <b>CMYK:</b> 0%, 0%, 0%, 11% <br />
           </p>
           <br />
-          <p>
+          <p class="hexcolortext">Baggrundsfarve <br/>
             Sekundære farve <br/>
             Call to Action <br>
             Logo <br>
@@ -72,12 +68,12 @@
         <div class="farve3"></div>
         <div class="infobox3">
           <p class="hexcolor">
-            <b>HEX:</b> #F1F1E2 <br />
-            <b>RGB:</b> (241, 241, 226) <br />
-            <b>CMYK:</b> 0%, 0%, 6%, 5% <br />
+            <b>HEX:</b> #BB86FC <br />
+            <b>RGB:</b> (187, 134, 252) <br />
+            <b>CMYK:</b> 26%, 47%, 0%, 1% <br />
           </p>
           <br />
-          <p>
+          <p class="hexcolortext">Baggrundsfarve <br/>
             Teritære farve <br />
             Menulinje <br>
             Checkbox <br>
@@ -89,12 +85,26 @@
         <div class="farve4"></div>
         <div class="infobox4">
           <p class="hexcolor">
-            <b>HEX:</b> #FFFFFF <br />
-            <b>RGB:</b> (255, 255, 255)) <br />
-            <b>CMYK:</b> 0%, 0%, 0%, 0% <br />
+            <b>HEX:</b> #3700B3 <br />
+            <b>RGB:</b> (55, 0, 179) <br />
+            <b>CMYK:</b>  69%, 100%, 0%, 30% <br />
           </p>
           <br />
-          <p>Baggrundsfarve <br/>
+          <p class="hexcolortext">Baggrundsfarve <br/>
+            Søgefelt <br>
+          </p>
+        </div>
+      </div>
+      <div class="wrappercard">
+        <div class="farve5"></div>
+        <div class="infobox5">
+          <p class="hexcolor">
+            <b>HEX:</b>  #03DAC5 <br />
+            <b>RGB:</b> (3, 218, 197) <br />
+            <b>CMYK:</b> 99%, 0%, 10%, 15% <br />
+          </p>
+          <br />
+          <p class="hexcolortext">Baggrundsfarve <br/>
             Søgefelt <br>
           </p>
         </div>
