--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/stylesheet.css" />
     <title>Styleguide</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
-    /> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -27,13 +23,14 @@
         </ul>
       </nav>
     </header>
+    <hr/>
     <div class="sektion1">
       <div class="text">
         <h1>QuadSAT - Flight Assistant Manual</h1>
         <h2>Project 6 - Examproject</h2>
         <br />
         <p>
-          Denne styleguide er til for at skabe overblik over anvendte designelementer og kode til nuværende og fremtidige designere bag app’en.
+          The purpose of this style guide is to shed light on the design elements and the appurtenant codes that have been used in the online manual, "Flight Assistant Manual". It helps provide structure for future designers and/or programmers that intend to understand it's design principles.
         </p>
         <br />
         <p class="quote">
