Lavet færdig (mangler koden)

--- a/styleguide/typografi.html
+++ b/styleguide/typografi.html
@@ -6,11 +6,8 @@
     <link rel="stylesheet" href="css/stylesheet.css" />
     <title>Styleguide</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
-    /> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <header>
@@ -33,32 +30,79 @@
       <div class="sektion3">
        <div class="farven"></div>
        <div class=typo1></div>
-         <p class="tekst1">Forside</p>
-         <p class="tekst2">30PX</p>
-         <p class="tekst3">Bold</p>
-       <div class=typo2></div>
-         <p class="tekst12">Overskrift</p>
-         <p class="tekst22">20PX</p>
-         <p class="tekst32"> <b>Bold </b>& Regular</p>
+         <p class="tekst1">Headline 1</p>
+         <p class="tekst2">96PX</p>
+         <p class="tekst3">Light</p>
+
+      <div class=typo2></div>
+         <p class="tekst12">Headline 2</p>
+         <p class="tekst22">60PX</p>
+         <p class="tekst32">Light</p>
+
       <div class=typo3></div>
-        <p class="tekst13">Overskrift2</p>
-        <p class="tekst23">16PX</p>
-        <p class="tekst33"><b>Bold </b>& Regular</p>
+         <p class="tekst13">Headline 3</p>
+         <p class="tekst23">48PX</p>
+         <p class="tekst33">Regular</p>
+
       <div class=typo4></div>
-        <p class="tekst14">Overskrift3</p>
-        <p class="tekst24">12PX</p>
-        <p class="tekst34"><b>Bold </b>& Regular</p>
+         <p class="tekst14">Headline 4</p>
+         <p class="tekst24">34PX</p>
+         <p class="tekst34">Regular</p>
+
       <div class=typo5></div>
-        <p class="tekst15">Brødtekst</p>
-        <p class="tekst25">10PX</p>
-        <p class="tekst35">Regular</p>
+         <p class="tekst15">Headline 5</p>
+         <p class="tekst25">24PX</p>
+         <p class="tekst35">Regular</p>
+
       <div class=typo6></div>
-        <p class="tekst16"> <b>Paragraf</b>
+         <p class="tekst16">Headline 6</p>
+         <p class="tekst26">20PX</p>
+         <p class="tekst36">Medium</p>
+
+      <div class=typo7></div>
+         <p class="tekst17">Subtitle 1</p>
+         <p class="tekst27">16PX</p>
+         <p class="tekst37">Regular</p>
+
+      <div class=typo8></div>
+         <p class="tekst18">Subtitle 2</p>
+         <p class="tekst28">14PX</p>
+         <p class="tekst38">Medium</p>
+      
+      <div class=typo9></div>
+         <p class="tekst19">Body 1</p>
+         <p class="tekst29">16PX</p>
+         <p class="tekst39">Regular</p>
+
+      <div class=typo10></div>
+         <p class="tekst110">Body 2</p>
+         <p class="tekst210">14PX</p>
+         <p class="tekst310">Regular</p>
+
+      <div class=typo11></div>
+         <p class="tekst111">Button</p>
+         <p class="tekst211">14PX</p>
+         <p class="tekst311">Medium</p>
+
+
+      <div class=typo12></div>
+         <p class="tekst112">Caption</p>
+         <p class="tekst212">12PX</p>
+         <p class="tekst312">Regular</p>
+
+      <div class=typo13></div>
+         <p class="tekst113">Overline</p>
+         <p class="tekst213">10PX</p>
+         <p class="tekst313">Regular</p>
+
+      <div class=typox></div>
+        <p class="tekstx"> <b>Paragraf</b>
           <br>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus inventore iste magnam eveniet officia eos quisquam vitae amet non, perferendis debitis tenetur delectus fugit nobis adipisci veritatis molestias magni odit.
         </p>
         <br>
     </div>
+    
   </section>
   <br>
   <br>
