ændret padding på farve infobox

--- a/styleguide/typografi.html
+++ b/styleguide/typografi.html
@@ -102,12 +102,12 @@
         </p>
         <br>
     </div>
-    
+
   </section>
   <br>
   <br>
   <br>
-  <h3>Kode</h3>
+  <h3>Code</h3>
   <br>
   <section>
     <div class="wrappercode-icons">
