index done ish, needs mobile

--- a/index.html
+++ b/index.html
@@ -8,5 +8,38 @@
     <link rel="stylesheet" href="dist/css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <section class="login">
+      <div class="login__container">
+        <h4>Flight Assistant Manual</h4>
+        <div id="loginform">
+          <div class="login__inputs">
+            <label for="operator">Operator</label>
+            <input
+              type="text"
+              id="opname"
+              name="opname"
+              placeholder="E.g QuadSAT"
+            /><br /><br />
+          </div>
+          <div class="login__inputs">
+            <label for="password">Password</label>
+            <input
+              type="text"
+              id="password"
+              name="password"
+              placeholder="Password"
+            />
+          </div>
+        </div>
+        <a class="login__fpass"><u>Forgot password?</u></a
+        ><br />
+        <div class="login__wrapperbtn">
+          <a href="tableofcontents.html" type="button" class="login__btn">
+            LOG IN
+          </a>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
