small changes to forgotpass

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             />
           </div>
         </div>
-        <a class="login__fpass"><u>Forgot password?</u></a
+        <a class="login__fpass" href="forgotpass.html">Forgot password?</a
         ><br />
         <div class="login__wrapperbtn">
           <a href="tableofcontents.html" type="button" class="login__btn">
