--- a/styleguide/typografi.html
+++ b/styleguide/typografi.html
@@ -25,7 +25,7 @@
       </nav>
     </header>
     <hr>
-    <h3>Typografi</h3>
+    <h3>Typography</h3>
     <section>
       <div class="sektion3">
        <div class="farven"></div>
