--- a/styleguide/logo.html
+++ b/styleguide/logo.html
@@ -31,7 +31,7 @@
      <div class="logo">
      <img src="assets/images/logo_blue.png" class="logopic" alt="logopic" /></div>
      <div class="kode-overskrift">
-    <h3>Kode</h3> </div>
+    <h3 class="title2">Code</h3> </div>
        <div class="wrapper-box">
      <div class="pink1"></div>
      <div class="kodeboks1">
