--- a/styleguide/knapper.html
+++ b/styleguide/knapper.html
@@ -26,10 +26,10 @@
       </nav>
     </header>
     <hr />
-    <h3>Knapper</h3>
+    <h3>Buttons</h3>
     <section class="sektion5">
       <div class="btnsGridContainer">
-        <div class="kode-overskrift1"> <h3>Kode</h3></div>
+        <div class="kode-overskrift1"> <h3 class="title2">Code</h3></div>
         <div class="btnsGridItem1">
           <h4>Login ind med email</h4>
           <br>
