--- a/styleguide/farver.html
+++ b/styleguide/farver.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <hr />
-    <h3>Farver</h3>
+    <h3>Colors</h3>
     <div class="sektion2">
       <div class="wrappercard">
         <div class="farve1"></div>
