logo siden lavet

--- a/styleguide/logo.html
+++ b/styleguide/logo.html
@@ -29,7 +29,7 @@
 
     <div class="sektion4">
      <div class="logo">
-     <img src="assets/images/logo_blue.png" class="logopic" alt="logopic" /></div>
+     <img src="assets/images/logo_white.png" class="logopic" alt="logopic" /></div>
      <div class="kode-overskrift">
     <h3 class="title2">Code</h3> </div>
        <div class="wrapper-box">
