logo ændret til rigtig

--- a/styleguide/ikoner.html
+++ b/styleguide/ikoner.html
@@ -25,11 +25,11 @@
       </nav>
     </header>
     <hr />
-    <h3>Ikoner</h3>
+    <h3>Icons</h3>
 
     <table>
       <tr class="menu">
-        <th>Ikon</th>
+        <th>Icons</th>
         <th>Betydning</th>
       </tr>
       <tr>
@@ -61,7 +61,7 @@
         <td>Bruges til at filtrere mellem kategorier</td>
       </tr>
     </table>
-    <h3>Kode</h3>
+    <h3>Code</h3>
     <div class="wrappercode-icons">
       <div class="pink"></div>
       <div class="kodeboks">
