--- a/styleguide/layout.html
+++ b/styleguide/layout.html
@@ -31,7 +31,7 @@
          <div class="gridlayout">
          <img src="assets/images/layout.png" class="gridpic" alt="gridpic" /></div>
          <div class="kode-overskrift">
-        <h3>Kode</h3> </div>
+        <h3 class="title2">Code</h3> </div>
            <div class="wrapper-box">
          <div class="pink22"></div>
          <div class="kodeboks1">
