--- a/styleguide/formular.html
+++ b/styleguide/formular.html
@@ -156,7 +156,7 @@
       </div>
 
       <div class="kode-overskrift">
-        <h3>Kode</h3>
+        <h3 class="title2">Code</h3>
       </div>
       <div class="formitem">
         <div class="pink3"></div>
