--- a/forgotpass.html
+++ b/forgotpass.html
@@ -13,7 +13,8 @@
       <div class="login__container">
         <h4>Flight Assistant Manual</h4>
         <div class="login__container2">
-          <h5><b>Forgot password?</b></h5>
+          <p><b>Forgot password?</b></p>
+          <br />
           <p>
             If you have forgotten your password or operator ID, please contact
             QuadSAT’s support team for assistance.
