farve siderne er færdige (der er tilføjet tekst omkring hvad de bruges til)

--- a/styleguide/farver.html
+++ b/styleguide/farver.html
@@ -35,12 +35,7 @@
             <b>CMYK:</b> 0%, 0%, 0%, 84% <br />
           </p>
           <br />
-          <p class="hexcolortext">Baggrundsfarve <br/>
-            Primær farve<br/>
-            Menulinje <br>
-            Logo <br>
-            Kontrast <br>
-            Typografi <br>
+          <p class="hexcolortext">Background color<br/>
           </p>
         </div>
       </div>
@@ -53,14 +48,9 @@
             <b>CMYK:</b> 0%, 0%, 0%, 11% <br />
           </p>
           <br />
-          <p class="hexcolortext">Baggrundsfarve <br/>
-            Sekundære farve <br/>
-            Call to Action <br>
-            Logo <br>
-            Kontrast <br>
-            Typografi <br>
-            Knapper <br>
-            Ikoner <br>
+          <p class="hexcolortext">Text color <br/>
+            Line under headlines <br/>
+            Icons <br>
           </p>
         </div>
       </div>
@@ -73,11 +63,11 @@
             <b>CMYK:</b> 26%, 47%, 0%, 1% <br />
           </p>
           <br />
-          <p class="hexcolortext">Baggrundsfarve <br/>
-            Teritære farve <br />
-            Menulinje <br>
-            Checkbox <br>
-            Typografi (Forside) <br>
+          <p class="hexcolortext">Menu icon <br/>
+            Line under navigation <br />
+            Contrast <br>
+            Footer line <br>
+            Button<br>
           </p>
         </div>
       </div>
@@ -90,8 +80,7 @@
             <b>CMYK:</b>  69%, 100%, 0%, 30% <br />
           </p>
           <br />
-          <p class="hexcolortext">Baggrundsfarve <br/>
-            Søgefelt <br>
+          <p class="hexcolortext">Illustration <br/>
           </p>
         </div>
       </div>
@@ -104,8 +93,9 @@
             <b>CMYK:</b> 99%, 0%, 10%, 15% <br />
           </p>
           <br />
-          <p class="hexcolortext">Baggrundsfarve <br/>
-            Søgefelt <br>
+          <p class="hexcolortext">Button outline <br/>
+            Progress line<br>
+            Contrast<br>
           </p>
         </div>
       </div>
