forøsgt med nu collapsible box

--- a/styleguide/logo.html
+++ b/styleguide/logo.html
@@ -33,8 +33,18 @@
      <div class="kode-overskrift">
     <h3 class="title2">Code</h3> </div>
        <div class="wrapper-box">
-     <div class="pink1"></div>
-     <div class="kodeboks1">
+      <!--
+        <div class="pink1"></div>
+        -->
+     <!--
+       <div class="kodeboks1">
+         -->
+        <button type="button" class="collapsible">Open Collapsible</button>
+        <div class="content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+
+
        <b>HTML:</b> <br>
        &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
        <br>
@@ -47,5 +57,6 @@
      </div>
       </div>
     </div>
+    <script src="script/script1.js" defer></script>
   </body>
   </html>
