fået rettet tabellen

--- a/styleguide/ikoner.html
+++ b/styleguide/ikoner.html
@@ -28,9 +28,9 @@
     <h3>Icons</h3>
 
     <table>
-      <tr class="menu">
-        <th>Icons</th>
-        <th>Betydning</th>
+      <tr>
+        <th class="menu">Icons</th>
+        <th class="menu">Importance</th>
       </tr>
       <tr>
         <td><img src="icons1/email.png" alt="emailikon" /></td>
