--- a/tableofcontents.html
+++ b/tableofcontents.html
@@ -12,32 +12,180 @@
   <body>
     <header>
       <nav>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+            >&times;</a
+          >
+
+          <a href="tableofcontents.html">
+            <img
+              src="images/white-quadsat.svg"
+              class="whitelogo2"
+              alt="Sidemenu dots"
+              loading="lazy"
+              decoding="async"
+          /></a>
+          <hr class="purpleLineSide" />
+          <h5>TABLE OF CONTENTS</h5>
+          <div class="sideMenuMargin">
+            <div id="list6" class="dropdown-check-list" tabindex="100">
+              <span class="anchor"
+                ><h5><b>01</b> <span> New mission</span></h5></span
+              >
+              <ul class="items">
+                <li>
+                  <img
+                    src="images/icons/dropdownicon.svg"
+                    alt="Sidemenu dots"
+                    loading="lazy"
+                    decoding="async"
+                    class="sideDropDots"
+                  />
+                </li>
+                <li class="listItemsSide"><a href="">Newly created mission</a></li>
+                <li class="listItemsSide"><a href="">Caution</a></li>
+                <li class="listItemsSide"><a href="">Equipment</a></li>
+                <li class="listItemsSide"><a href="">Operator</a></li>
+                <li class="listItemsSide"><a href=""> Flexibility and range</a></li>
+              </ul>
+            </div>
+            <div id="list7" class="dropdown-check-list" tabindex="100">
+              <span class="anchor"
+                ><h5><b>02</b> <span>Gathering data</span></h5></span
+              >
+
+              <ul class="items">
+                <li>
+                  <img
+                    src="images/icons/dropdownicon.svg"
+                    alt="Sidemenu dots"
+                    loading="lazy"
+                    decoding="async"
+                    class="sideDropDots"
+                  />
+                </li>
+                <li class="listItemsSide"><a href="">Newly created mission</a></li>
+                <li class="listItemsSide"><a href="">Caution</a></li>
+                <li class="listItemsSide"><a href="">Equipment</a></li>
+                <li class="listItemsSide"><a href="">Operator</a></li>
+                <li class="listItemsSide"><a href=""> Flexibility and range</a></li>
+              </ul>
+            </div>
+            <div id="list8" class="dropdown-check-list" tabindex="100">
+              <span class="anchor"
+                ><h5><b>03</b> <span>Software basics</span></h5></span
+              >
+
+              <ul class="items">
+                <li>
+                  <img
+                    src="images/icons/dropdownicon.svg"
+                    alt="Dropdown dots"
+                    loading="lazy"
+                    decoding="async"
+                    class="sideDropDots"
+                  />
+                </li>
+                <li class="listItemsSide"><a href="">Newly created mission</a></li>
+                <li class="listItemsSide"><a href="">Caution</a></li>
+                <li class="listItemsSide"><a href="">Equipment</a></li>
+                <li class="listItemsSide"><a href="">Operator</a></li>
+                <li class="listItemsSide"><a href=""> Flexibility and range</a></li>
+              </ul>
+            </div>
+
+            <div id="list9" class="dropdown-check-list" tabindex="100">
+              <span class="anchor"
+                ><h5><b>04</b> <span>Connecting to drone</span></h5></span
+              >
+
+              <ul class="items">
+                <li>
+                  <img
+                    src="images/icons/dropdownicon.svg"
+                    alt="Sidemenu dots"
+                    loading="lazy"
+                    decoding="async"
+                    class="sideDropDots"
+                  />
+                </li>
+                <li class="listItemsSide"><a href="">Newly created mission</a></li>
+                <li class="listItemsSide"><a href="">Caution</a></li>
+                <li class="listItemsSide"><a href="">Equipment</a></li>
+                <li class="listItemsSide"><a href="">Operator</a></li>
+                <li class="listItemsSide"><a href=""> Flexibility and range</a></li>
+              </ul>
+            </div>
+
+            <div id="list10" class="dropdown-check-list" tabindex="100">
+              <span class="anchor"
+                ><h5><b>05</b> <span>Antenna measurements</span></h5></span
+              >
+
+              <ul class="items">
+                <li>
+                  <img
+                    src="images/icons/dropdownicon.svg"
+                    alt="Dropdown dots"
+                    loading="lazy"
+                    decoding="async"
+                    class="sideDropDots"
+                  />
+                </li>
+                <li class="listItemsSide"><a href="">Newly created mission</a></li>
+            <li class="listItemsSide"><a href="">Caution</a></li>
+            <li class="listItemsSide"><a href="">Equipment</a></li>
+            <li class="listItemsSide"><a href="">Operator</a></li>
+            <li class="listItemsSide"><a href="">Flexibility and range</a></li>
+              </ul>
+            </div>
+          </div><div class="sideIcons"><a href="#"
+          ><img
+            src="images/icons/home.svg"
+
+            alt="Home icon"
+            loading="lazy"
+            decoding="async"
+        /> Home</a><a href="#"
+        ><img
+          src="images/icons/logout.svg"
+
+          alt="Logout icon"
+          loading="lazy"
+          decoding="async"
+      /> Log out</a></div>
+        </div>
+
+        <!-- sidemenu slut -->
+
         <div class="topnavContainer">
-          <a href=""
+          <a href="#"
             ><img
               src="images/icons/sidemenu.svg"
               class="sidemenu"
               alt="Sidemenu dots"
               loading="lazy"
               decoding="async"
+              onclick="openNav()"
           /></a>
           <h3>TABLE OF CONTENTS - Flight Assistant Manual</h3>
           <a href="">
             <img
               src="images/white-quadsat.svg"
               class="whitelogo"
-              alt="Sidemenu dots"
+              alt="QuadSATs logo"
               loading="lazy"
               decoding="async"
           /></a>
         </div>
         <hr class="purpleLine" />
         <div class="breadNsearch">
-          <p>Table of contents /</p>
+          <a href="tableofcontents.html">Table of contents /</a>
+
           <input type="text" placeholder="Search.." /><img
             src="images/icons/search.svg"
             class="whitelogo"
-            alt="Sidemenu dots"
+            alt="Search Icon"
             loading="lazy"
             decoding="async"
           />
@@ -46,28 +194,47 @@
     </header>
     <main>
       <div class="dropdownGrid">
-        <div class="dropdownGrid__gridItem1">
-          <h3 class="numbermenu"><b>01</b></h3>
-          <div class="dropdown">
-            <button onclick="myFunction()" class="dropdown__dropbtn">
-              New mission
-              <hr />
-            </button>
+        <div id="list1" class="dropdown-check-list" tabindex="100">
+          <span class="anchor"
+            ><h4><b>01</b> <span> New mission</span></h4></span
+          >
 
-            <div id="myDropdown" class="dropdown__dropdown-content">
+          <ul class="items">
+            <li>
               <img
                 src="images/icons/dropdownicon.svg"
-                alt="Sidemenu dots"
+                alt="Dropdown dots"
                 loading="lazy"
                 decoding="async"
               />
-              <a href="#">Newly created mission</a>
-              <a href="#">Caution</a>
-              <a href="#">Equipment</a>
-              <a href="#">Operator</a>
-              <a href="#">Flexibility and range</a>
-            </div>
-          </div>
+            </li>
+            <li class="listItems"><a href="">Newly created mission</a></li>
+            <li class="listItems"><a href="">Caution</li>
+            <li class="listItems"><a href="">Equipment</a></li>
+            <li class="listItems"><a href="">Operator</a></li>
+            <li class="listItems"><a href="">Flexibility and range</a></li>
+          </ul>
+        </div>
+        <div id="list2" class="dropdown-check-list" tabindex="100">
+          <span class="anchor"
+            ><h4><b>02</b> <span>Gathering data</span></h4></span
+          >
+
+          <ul class="items">
+            <li>
+              <img
+                src="images/icons/dropdownicon.svg"
+                alt="Dropdown dots"
+                loading="lazy"
+                decoding="async"
+              />
+            </li>
+            <li class="listItems"><a href="">Newly created mission</a></li>
+            <li class="listItems"><a href="">Caution</a></li>
+            <li class="listItems"><a href="">Equipmen</a>t</li>
+            <li class="listItems"><a href="">Operator</a></li>
+            <li class="listItems"><a href="">Flexibility and range</a></li>
+          </ul>
         </div>
         <img
           src="images/placeholder.png"
@@ -76,6 +243,72 @@
           loading="lazy"
           decoding="async"
         />
+
+        <div id="list3" class="dropdown-check-list" tabindex="100">
+          <span class="anchor"
+            ><h4><b>03</b> <span>Software basics</span></h4></span
+          >
+
+          <ul class="items">
+            <li>
+              <img
+                src="images/icons/dropdownicon.svg"
+                alt="Dropdown dots"
+                loading="lazy"
+                decoding="async"
+              />
+            </li>
+            <li class="listItems"><a href="">Newly created mission</a></li>
+            <li class="listItems"><a href="">Caution</a></li>
+            <li class="listItems"><a href="">Equipment</a></li>
+            <li class="listItems"><a href="">Operator</a></li>
+            <li class="listItems"><a href="">Flexibility and range</a></li>
+          </ul>
+        </div>
+
+        <div id="list4" class="dropdown-check-list" tabindex="100">
+          <span class="anchor"
+            ><h4><b>04</b> <span>Connecting to drone</span></h4></span
+          >
+
+          <ul class="items">
+            <li>
+              <img
+                src="images/icons/dropdownicon.svg"
+                alt="Dropdown dots"
+                loading="lazy"
+                decoding="async"
+              />
+            </li>
+            <li class="listItems"><a href="">Newly created mission</a></li>
+            <li class="listItems"><a href="">Caution</a></li>
+            <li class="listItems"><a href="">Equipment</a></li>
+            <li class="listItems"><a href="">Operator</a></li>
+            <li class="listItems"><a href="">Flexibility and range</a></li>
+          </ul>
+        </div>
+
+        <div id="list5" class="dropdown-check-list" tabindex="100">
+          <span class="anchor"
+            ><h4><b>05</b> <span>Antenna measurements</span></h4></span
+          >
+
+          <ul class="items">
+            <li>
+              <img
+                src="images/icons/dropdownicon.svg"
+                alt="Dropdown dots"
+                loading="lazy"
+                decoding="async"
+              />
+            </li>
+            <li class="listItems"><a href="">Newly created mission</a></li>
+            <li class="listItems"><a href="">Caution</a></li>
+            <li class="listItems"><a href="">Equipment</a></li>
+            <li class="listItems"><a href="">Operator</a></li>
+            <li class="listItems"><a href="">Flexibility and range</a></li>
+          </ul>
+        </div>
       </div>
     </main>
   </body>
