Collapsible box på logo side lavet (JUHU)

--- a/styleguide/logo.html
+++ b/styleguide/logo.html
@@ -33,27 +33,20 @@
      <div class="kode-overskrift">
     <h3 class="title2">Code</h3> </div>
        <div class="wrapper-box">
-      <!--
-        <div class="pink1"></div>
-        -->
-     <!--
-       <div class="kodeboks1">
-         -->
-        <button type="button" class="collapsible">Open Collapsible</button>
+        <button type="button" class="collapsible">Open to see code</button>
         <div class="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+
+          <b>HTML:</b> <br>
+            &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+            <br>
+            <br>
+            <b>CSS:</b> <br>
+            .logoSide { <br>
+            width: 85px; <br>
+            margin: 50px 0 -130px 70px; <br>
+          }
         </div>
-
-
-       <b>HTML:</b> <br>
-       &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
-       <br>
-       <br>
-       <b>CSS:</b> <br>
-       .logoSide { <br>
-       width: 85px; <br>
-       margin: 50px 0 -130px 70px; <br>
-       }
      </div>
       </div>
     </div>
