forsøget at lave collapsible boks på typografi (virker) og knapper (virker ikke)

--- a/styleguide/typografi.html
+++ b/styleguide/typografi.html
@@ -108,26 +108,22 @@
   <br>
   <br>
   <h3>Code</h3>
-  <br>
-  <section>
-    <div class="wrappercode-icons">
-      <div class="pink"></div>
-      <div class="kodeboks">
-        <b>HTML:</b> <br>
-       &lt;h2 class="headerLogin"&gt; <br>
-        Find den perfekte <br />
-        frisør for dig <br>
-       &lt;/h2&gt; 
+  <div class="wrapper-box-typografi">
+   <button type="button-typografi" class="collapsible-typografi">Open to see code</button>
+   <div class="content-typografi">
+     <b>HTML:</b> <br>
+       &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
        <br>
        <br>
        <b>CSS:</b> <br>
-       .headerLogin { <br>
-        font-size: 30px; <br>
-        color: #f1f1e2; <br>
-       }
-        </div>
-    </div>
+       .logoSide { <br>
+       width: 85px; <br>
+       margin: 50px 0 -130px 70px; <br>
+     }
+   </div>
+   </div>
   </section>
+  <script src="script/script1.js" defer></script>
   </body>
 </html>
   
