--- a/styleguide/knapper.html
+++ b/styleguide/knapper.html
@@ -51,6 +51,22 @@
               Denne knap bliver anvendt på index-siden til, at man kan logge ind med <br> sin e-mail.
             </p>
           </div>
+          <div class="wrapper-box-button1">
+            <button type="button-button1" class="collapsible-typografi">Open to see code</button>
+            <div class="content-button1">
+              <b>HTML:</b> <br>
+                &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+                <br>
+                <br>
+                <b>CSS:</b> <br>
+                .logoSide { <br>
+                width: 85px; <br>
+                margin: 50px 0 -130px 70px; <br>
+              }
+            </div>
+            </div>
+          
+          <!--
           <div class="farveboks1"></div>
           <div class="kodeboksen1">
             <br>
@@ -58,6 +74,7 @@
             <b>HTML:</b> <br>
               <b>CSS:</b> <br>
           </div>
+          -->
           <div class="btnsGridItem2">
             <br>
             <h4>Log ind med mobil nr.</h4>
@@ -381,5 +398,6 @@
           </div>
         </div>
     </section>
+    <script src="script/script1.js" defer></script>
   </body>
 </html>
