Boxene lavet færdige, mangler dog ved formular og knapper

--- a/styleguide/ikoner.html
+++ b/styleguide/ikoner.html
@@ -62,24 +62,24 @@
       </tr>
     </table>
     <h3>Code</h3>
-    <div class="wrappercode-icons">
-      <div class="pink"></div>
-      <div class="kodeboks">
+    <div class="wrapper-box">
+      <button type="button" class="collapsible">Open to see code</button>
+      <div class="content">
+
+
         <b>HTML:</b> <br>
-        &lt;img <br>
-          class="emailIcon" <br>
-          src="assets/icons/email.png"<br>
-          alt="Email ikon"
-        /&gt;
-        <br>
-        <br>
-        <b>CSS:</b> <br>
-          .img { <br>
-          width: 55px; <br>
-          height: 30px; <br>
-          padding-left: 25px; <br>
+          &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+          <br>
+          <br>
+          <b>CSS:</b> <br>
+          .logoSide { <br>
+          width: 85px; <br>
+          margin: 50px 0 -130px 70px; <br>
         }
       </div>
+   </div>
     </div>
+  </div>
+  <script src="script/script1.js" defer></script>
   </body>
 </html>
