--- a/styleguide/knapper.html
+++ b/styleguide/knapper.html
@@ -52,7 +52,7 @@
             </p>
           </div>
           <div class="wrapper-box-button1">
-            <button type="button-button1" class="collapsible-typografi">Open to see code</button>
+            <button type="button" class="collapsible-typografi">Open to see code</button>
             <div class="content-button1">
               <b>HTML:</b> <br>
                 &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
