--- a/styleguide/layout.html
+++ b/styleguide/layout.html
@@ -26,20 +26,29 @@
     </header>
     <hr>
     <h3>Layout</h3>
-
         <div class="sektion6">
          <div class="gridlayout">
          <img src="assets/images/layout.png" class="gridpic" alt="gridpic" /></div>
          <div class="kode-overskrift">
-        <h3 class="title2">Code</h3> </div>
-           <div class="wrapper-box">
-         <div class="pink22"></div>
-         <div class="kodeboks1">
-          <b>HTML:</b> <br>
-          <b>CSS:</b> <br>
-         </div>
+    <h3 class="title2">Code</h3> </div>
+        <div class="wrapper-box-layout">
+          <button type="button" class="collapsible-layout">Open to see code</button>
+          <div class="content-layout">
+    
+    
+            <b>HTML:</b> <br>
+              &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+              <br>
+              <br>
+              <b>CSS:</b> <br>
+              .logoSide { <br>
+              width: 85px; <br>
+              margin: 50px 0 -130px 70px; <br>
+            }
           </div>
+       </div>
         </div>
-
+      </div>
+      <script src="script/script1.js" defer></script>
       </body>
       </html>
