--- a/styleguide/knapper.html
+++ b/styleguide/knapper.html
@@ -30,6 +30,25 @@
       <section class="sektion5">
         <div class="btnsGridContainer">
           <div class="kode-overskrift1"> <h3 class="title2">Code</h3></div>
+
+          <div class="wrapper-box-button1">
+            <button type="button" class="collapsible-button1">Open to see code</button>
+            <div class="content-button1">
+              <b>HTML:</b> <br>
+                &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+                <br>
+                <br>
+                <b>CSS:</b> <br>
+                .logoSide { <br>
+                width: 85px; <br>
+                margin: 50px 0 -130px 70px; <br>
+              }
+            </div>
+            </div>
+
+
+
+
           <div class="btnsGridItem1">
             <h4>Login ind med email</h4>
             <br>
@@ -51,21 +70,7 @@
               Denne knap bliver anvendt på index-siden til, at man kan logge ind med <br> sin e-mail.
             </p>
           </div>
-          <div class="wrapper-box-button1">
-            <button type="button" class="collapsible-typografi">Open to see code</button>
-            <div class="content-button1">
-              <b>HTML:</b> <br>
-                &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
-                <br>
-                <br>
-                <b>CSS:</b> <br>
-                .logoSide { <br>
-                width: 85px; <br>
-                margin: 50px 0 -130px 70px; <br>
-              }
-            </div>
-            </div>
-          
+        
           <!--
           <div class="farveboks1"></div>
           <div class="kodeboksen1">
