fixed small changes

--- a/tableofcontents.html
+++ b/tableofcontents.html
@@ -30,7 +30,7 @@
           <div class="sideMenuMargin">
             <div id="list6" class="dropdown-check-list" tabindex="100">
               <span class="anchor"
-                ><h5><b>01</b> <span> New mission</span></h5></span
+                ><h5><b>01</b> <span> Missions</span></h5></span
               >
               <ul class="items">
                 <li>
@@ -139,14 +139,14 @@
             <li class="listItemsSide"><a href="">Flexibility and range</a></li>
               </ul>
             </div>
-          </div><div class="sideIcons"><a href="#"
+          </div><div class="sideIcons"><a href="tableofcontents.html"
           ><img
             src="images/icons/home.svg"
 
             alt="Home icon"
             loading="lazy"
             decoding="async"
-        /> Home</a><a href="#"
+        /> Home</a><a href="index.html"
         ><img
           src="images/icons/logout.svg"
 
@@ -196,7 +196,7 @@
       <div class="dropdownGrid">
         <div id="list1" class="dropdown-check-list" tabindex="100">
           <span class="anchor"
-            ><h4><b>01</b> <span> New mission</span></h4></span
+            ><h4><b>01</b> <span> Missions</span></h4></span
           >
 
           <ul class="items">
@@ -231,7 +231,7 @@
             </li>
             <li class="listItems"><a href="">Newly created mission</a></li>
             <li class="listItems"><a href="">Caution</a></li>
-            <li class="listItems"><a href="">Equipmen</a>t</li>
+            <li class="listItems"><a href="">Equipment</a></li>
             <li class="listItems"><a href="">Operator</a></li>
             <li class="listItems"><a href="">Flexibility and range</a></li>
           </ul>
