start på preloader (virker lige pt ikke)

--- a/tableofcontents.html
+++ b/tableofcontents.html
@@ -10,6 +10,11 @@
     <title>Document</title>
   </head>
   <body>
+      <!--Preloader-->
+      <div class="splash">
+        <div class="fade-in"></div>
+      </div>
+       <!--Preloader-->
     <header>
       <nav>
         <div id="mySidenav" class="sidenav">
