preloader is working

--- a/tableofcontents.html
+++ b/tableofcontents.html
@@ -11,10 +11,13 @@
   </head>
   <body>
       <!--Preloader-->
-      <div class="splash">
-        <div class="fade-in"></div>
-      </div>
-       <!--Preloader-->
+        <div class="splash">
+          <div class="fade-in">
+            <img class="preloaderpic" src="images/placeholder.png" alt="illustration-preloader">
+          </div>
+        </div>
+     <!--Preloader-->
+
     <header>
       <nav>
         <div id="mySidenav" class="sidenav">
