error side lavet færdig

--- a/error.html
+++ b/error.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="dist/css/reset.css" />
     <link rel="stylesheet" href="dist/css/style.css" />
     <script src="app/script/script.js" defer></script>
-    <title>Document</title>
+    <title>Flight assistant manual</title>
   </head>
   <body>
     <header>
       <nav>
+           <!-- sidemenu -->
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
             >&times;</a
@@ -168,7 +169,7 @@
               decoding="async"
               onclick="openNav()"
           /></a>
-          <h3>TABLE OF CONTENTS - Flight Assistant Manual</h3>
+          <h3>Error</h3>
           <a href="">
             <img
               src="images/white-quadsat.svg"
@@ -180,7 +181,6 @@
         </div>
         <hr class="purpleLine" />
         <div class="breadNsearch">
-          <a href="tableofcontents.html">Table of contents /</a>
 
           <input type="text" placeholder="Search.." /><img
             src="images/icons/search.svg"
@@ -193,123 +193,18 @@
       </nav>
     </header>
     <main>
-      <div class="dropdownGrid">
-        <div id="list1" class="dropdown-check-list" tabindex="100">
-          <span class="anchor"
-            ><h4><b>01</b> <span> Missions</span></h4></span
-          >
+        <h5 class="errorp">The requested URL was not found on this server.</h5>
+        <div class="errorgrid" >
+        <div class="errorbox">
+            <h1>Error 404</h1>
+            <h4 class="errorboxtext">An error has occurred: the page is not available. </h4>
 
-          <ul class="items">
-            <li>
-              <img
-                src="images/icons/dropdownicon.svg"
-                alt="Dropdown dots"
-                loading="lazy"
-                decoding="async"
-              />
-            </li>
-            <li class="listItems"><a href="">Newly created mission</a></li>
-            <li class="listItems"><a href="">Caution</li>
-            <li class="listItems"><a href="">Equipment</a></li>
-            <li class="listItems"><a href="">Operator</a></li>
-            <li class="listItems"><a href="">Flexibility and range</a></li>
-          </ul>
+        <div class="home__wrapperbtn">
+            <a href="index.html" type="button" class="home__btn"> HOME </a>
         </div>
-        <div id="list2" class="dropdown-check-list" tabindex="100">
-          <span class="anchor"
-            ><h4><b>02</b> <span>Gathering data</span></h4></span
-          >
-
-          <ul class="items">
-            <li>
-              <img
-                src="images/icons/dropdownicon.svg"
-                alt="Dropdown dots"
-                loading="lazy"
-                decoding="async"
-              />
-            </li>
-            <li class="listItems"><a href="">Newly created mission</a></li>
-            <li class="listItems"><a href="">Caution</a></li>
-            <li class="listItems"><a href="">Equipment</a></li>
-            <li class="listItems"><a href="">Operator</a></li>
-            <li class="listItems"><a href="">Flexibility and range</a></li>
-          </ul>
         </div>
-        <img
-          src="images/placeholder.png"
-          class="dropdownGrid__frontIllu"
-          alt="Sidemenu dots"
-          loading="lazy"
-          decoding="async"
-        />
-
-        <div id="list3" class="dropdown-check-list" tabindex="100">
-          <span class="anchor"
-            ><h4><b>03</b> <span>Software basics</span></h4></span
-          >
-
-          <ul class="items">
-            <li>
-              <img
-                src="images/icons/dropdownicon.svg"
-                alt="Dropdown dots"
-                loading="lazy"
-                decoding="async"
-              />
-            </li>
-            <li class="listItems"><a href="">Newly created mission</a></li>
-            <li class="listItems"><a href="">Caution</a></li>
-            <li class="listItems"><a href="">Equipment</a></li>
-            <li class="listItems"><a href="">Operator</a></li>
-            <li class="listItems"><a href="">Flexibility and range</a></li>
-          </ul>
         </div>
-
-        <div id="list4" class="dropdown-check-list" tabindex="100">
-          <span class="anchor"
-            ><h4><b>04</b> <span>Connecting to drone</span></h4></span
-          >
-
-          <ul class="items">
-            <li>
-              <img
-                src="images/icons/dropdownicon.svg"
-                alt="Dropdown dots"
-                loading="lazy"
-                decoding="async"
-              />
-            </li>
-            <li class="listItems"><a href="">Newly created mission</a></li>
-            <li class="listItems"><a href="">Caution</a></li>
-            <li class="listItems"><a href="">Equipment</a></li>
-            <li class="listItems"><a href="">Operator</a></li>
-            <li class="listItems"><a href="">Flexibility and range</a></li>
-          </ul>
-        </div>
-
-        <div id="list5" class="dropdown-check-list" tabindex="100">
-          <span class="anchor"
-            ><h4><b>05</b> <span>Antenna measurements</span></h4></span
-          >
-
-          <ul class="items">
-            <li>
-              <img
-                src="images/icons/dropdownicon.svg"
-                alt="Dropdown dots"
-                loading="lazy"
-                decoding="async"
-              />
-            </li>
-            <li class="listItems"><a href="">Newly created mission</a></li>
-            <li class="listItems"><a href="">Caution</a></li>
-            <li class="listItems"><a href="">Equipment</a></li>
-            <li class="listItems"><a href="">Operator</a></li>
-            <li class="listItems"><a href="">Flexibility and range</a></li>
-          </ul>
-        </div>
-      </div>
+        <hr class="purpleLineerror" />
     </main>
   </body>
 </html>
