--- a/error.html
+++ b/error.html
@@ -204,7 +204,7 @@
         </div>
         </div>
         </div>
-        <hr class="purpleLineerror" />
+        <hr class="purpleLine"/>
     </main>
   </body>
 </html>
