boks virker ved knapper nr 1

--- a/styleguide/knapper.html
+++ b/styleguide/knapper.html
@@ -33,7 +33,7 @@
 
           <div class="wrapper-box-button1">
             <button type="button" class="collapsible-button1">Open to see code</button>
-            <div class="content-button1">
+            <div class="content-button1 invisible">
               <b>HTML:</b> <br>
                 &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
                 <br>
