alt er ready til det sidste indhold nu

--- a/styleguide/knapper.html
+++ b/styleguide/knapper.html
@@ -327,6 +327,144 @@
               Denne knap bliver anvendt på Rediger-siden til at melde afbud. 
             </p>
             </div>
+
+            <div class="wrapper-box-button9">
+              <button type="button" class="collapsible-button9">Open to see code</button>
+              <div class="content-button9 invisible">
+                <b>HTML:</b> <br>
+                  &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+                  <br>
+                  <br>
+                  <b>CSS:</b> <br>
+                  .logoSide { <br>
+                  width: 85px; <br>
+                  margin: 50px 0 -130px 70px; <br>
+                }
+              </div>
+              </div>
+
+          <div class="btnsGridItem10">
+            <br>
+            <h4>Anuller knap</h4>
+            <br>
+            <button
+            type="button"
+            class="btnLoginEmail"
+            onclick="document.location='edittime.html'"
+          >
+            Annuller
+          </button>
+            <p class="paragrafbox10">
+              <br>
+              <b>Anvendelse:</b>
+              <br>
+              Denne knap bliver anvendt på Rediger-siden under ‘Meld afbud’ til at annullere, at man er ved at melde afbud.
+            </p>
+            </div>
+           
+            <div class="wrapper-box-button10">
+              <button type="button" class="collapsible-button10">Open to see code</button>
+              <div class="content-button10 invisible">
+                <b>HTML:</b> <br>
+                  &lt;img id="logoSideid" class="logoSide" src="assets/images/logo_pink.png" alt="Filter ikon"/&gt;
+                  <br>
+                  <br>
+                  <b>CSS:</b> <br>
+                  .logoSide { <br>
+                  width: 85px; <br>
+                  margin: 50px 0 -130px 70px; <br>
+                }
+              </div>
+              </div>
+
+          <div class="btnsGridItem11">
+            <br>
+            <h4>4-cifret Kode knap</h4>
+            <br>
+            <button
+              type="button"
+              class="btnLoginEmail"
+              onclick="document.location='skiftkode.html'"
+            > Skift 4-cifret kode
+            </button>
+          <p class="paragrafbox11">
+            <br>
+            <b>Anvendelse:</b>
+            <br>
+            Denne knap bliver anvendt på profil-siden til at skifte sin kode. 
+          </p>
+          </div>
+          <div class="farveboks11"></div>
+          <div class="kodeboksen11">
+          <br>
+          <br>
+          <b>HTML:</b> <br>
+              <b>CSS:</b> <br>
+        </div>
+
+          <div class="btnsGridItem12">
+          <br>
+          <h4>Gem knap</h4>
+          <br>
+          <button type="button" class="btnLoginEmail" onclick="document.location='#'">
+            Gem
+          </button>
+          <p class="paragrafbox12">
+            <br>
+            <b>Anvendelse:</b>
+            <br>
+            Denne knap bliver anvendt på profil-siden til at gemme sine ændringer. 
+          </p>
+          </div>
+          <div class="farveboks12"></div>
+          <div class="kodeboksen12">
+          <br>
+          <br>
+          <b>HTML:</b> <br>
+              <b>CSS:</b> <br>
+            </div>
+
+          <div class="btnsGridItem13">
+          <br>
+          <h4>Swipe knap</h4>
+          <br>
+          <div class="profileContainer">
+            <div class="">
+              <label class="toggle">
+                <input class="toggleswitch" type="checkbox" />
+                <span class="roundbutton"></span>
+              </label>
+              <label class="toggle">
+                <input class="toggleswitch" type="checkbox" />
+                <span class="roundbutton"></span>
+              </label>
+              <label class="toggle">
+                <input class="toggleswitch" type="checkbox" />
+                <span class="roundbutton"></span>
+              </label>
+            </div>
+            <div class="sliderText">
+              <p>Slå touchID til</p>
+              <p>Påmindelser</p>
+              <p>Synkroniser med min kalender</p>
+            </div>
+          </div>
+          <p class="paragrafbox13">
+            <br>
+            <b>Anvendelse:</b>
+            <br>
+            Denne knap bliver brugt på profil-siden til at slå funktioner som f.eks. påmindelser til og fra. 
+          </p>
+          </div>
+          <div class="farveboks13"></div>
+          <div class="kodeboksen13">
+          <br>
+          <br>
+          <b>HTML:</b> <br>
+          <b>CSS:</b> <br>
+          <b>JS:</b> <br>
+          </div>
+        </div>
     </section>
     <script src="script/script1.js" defer></script>
   </body>
