--- a/missions.html
+++ b/missions.html
@@ -194,7 +194,7 @@
               onclick="openNav()"
           /></a>
           <h3>01 Missions</h3>
-          <a href="">
+          <a href="tableofcontents.html">
             <img
               src="images/white-quadsat.svg"
               class="whitelogo"
@@ -205,10 +205,11 @@
         </div>
         <hr class="purpleLine" />
         <div class="breadNsearch">
-          <a href="tableofcontents.html">Table of contents /</a
-          ><a class="breadNsearch__newM" href="tableofcontents.html"
-            >Newly created mission /</a
-          >
+          <div>
+            <a class="breadNsearch__newM" href="tableofcontents.html"
+              >Table of contents / </a
+            ><a href="tableofcontents.html"> <b>Newly created mission /</b></a>
+          </div>
 
           <input type="text" placeholder="Search.." /><img
             src="images/icons/search.svg"
@@ -220,6 +221,126 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="info-grid-container">
+        <div class="info-grid-container__griditem1">
+          <h4>Newly created mission</h4>
+          <br />
+          <div>
+            <p>
+              By double clicking on the name of the newly created mission on the
+              bar on the left, you will be presented with the three views that
+              you will interact with in order to perform the test.
+            </p>
+            <br />
+            <p>
+              The first view called the “calibration” allows you to change the
+              information regarding the referencing system (model, manufacturer,
+              configuration, frequency, position, orientation and radom).
+            </p>
+            <br />
+            <p>
+              It also allows you to adjust the antennas position and
+              orientation. Lastly, you are able to adjust the payload settings,
+              if any are connected.
+            </p>
+            <br />
+            <p>
+              The second view called the “scan” allows you to create the flights
+              of the drone that you will be using to test the antenna. Here, you
+              will also be doing the data gathering as well as the data
+              processing.
+            </p>
+            <br />
+            <p>
+              In the third and last view, called the “plot”, is where you will
+              be viewing the created data sets.
+            </p>
+          </div>
+        </div>
+        <div class="info-grid-container__griditem2">
+          <img
+            src="images/placeholder.png"
+            class="dropdownGrid__frontIllu"
+            alt="Sidemenu dots"
+            loading="lazy"
+            decoding="async"
+          />
+        </div>
+        <div class="info-grid-container__griditem3">
+          <img
+            src="images/placeholder.png"
+            class="dropdownGrid__frontIllu"
+            alt="Sidemenu dots"
+            loading="lazy"
+            decoding="async"
+          />
+        </div>
+      </div>
+      <div class="interactive-guide">
+        <div class="interactive-guide__griditem">
+          <h4>Guide</h4>
+          <div class="interactive-guide__content-flex">
+            <img
+              src="images/page1-cropd.png"
+              class="dropdownGrid__frontIllu"
+              alt="Sidemenu dots"
+              loading="lazy"
+              decoding="async"
+              id="imgClickAndChange"
+            />
+            <p>fdasfdsafdsa</p>
+          </div>
+          <div id="progress" class="progress-bar"></div>
+          <div class="progressBtn">
+            <button
+              id="click"
+              onclick="setPrc(), resetImage();"
+              class="progressBtnreset"
+            >
+              RESET
+            </button>
+            <button id="click" onclick="setPrc('25'), changeImage();">
+              STEP 1
+            </button>
+            <button id="click" onclick="setPrc('50'), changeImage2();">
+              STEP 2
+            </button>
+            <button id="click" onclick="setPrc('75'), changeImage3();">
+              STEP 3
+            </button>
+            <button id="click" onclick="setPrc('99.9'), changeImage4();">
+              STEP 4
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="footerBtns">
+        <a href=""
+          ><img
+            src="images/icons/leftArrow.svg"
+            alt="Left Arrow"
+            loading="lazy"
+            decoding="async"
+          />
+          <h4>PREVIOUS PAGE</h4></a
+        >
+        <a href="caution.html"
+          ><h4>NEXT PAGE</h4>
+          <img
+            src="images/icons/rightArrow.svg"
+            alt="Right Arrow"
+            loading="lazy"
+            decoding="async"
+        /></a>
+      </div>
+      <hr class="purpleLine" />
+      <div class="footerText">
+        <p>Flight Assistant Manual</p>
+        <p>Page 2</p>
+      </div>
+    </footer>
   </body>
 </html>
